manifests/platform/base/ngrok-operator/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ngrok-operator
  namespace: default
  annotations:
    k8s.ngrok.com/traffic-policy: restrict-ips
spec:
  gatewayClassName: ngrok
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "$NGROK_DOMAIN"
      allowedRoutes:
        namespaces:
          from: "microservices"
